--- a/src/assets/font/iconfont.css
+++ b/src/assets/font/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4924414 */
-  src: url('iconfont.woff2?t=1747661005899') format('woff2'),
-       url('iconfont.woff?t=1747661005899') format('woff'),
-       url('iconfont.ttf?t=1747661005899') format('truetype');
+  src: url('iconfont.woff2?t=1747674048241') format('woff2'),
+       url('iconfont.woff?t=1747674048241') format('woff'),
+       url('iconfont.ttf?t=1747674048241') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-xinjianwenjianjia1:before {
+  content: "\e600";
 }
 
 .icon-shangchuan1:before {
